Add gallery.html page

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Wild Atlantic Way - About</title>
+ <title>Wild Atlantic Wa - About</title>
 </head>
 <body>
  <h1>About the Wild Atlantic Way</h1>
